# winimerge

./: .clang-format  CMakeLists.txt
cmake/: FindFreeImagePlus.cmake  GEMacros.cmake
examples/: CMakeLists.txt  ImgWindowExample.cpp
src/: ImgConverter.hpp  ImgDiffBuffer.hpp  ImgMergeWindow.hpp  ImgWindow.cpp  ImgWindow.hpp  WinIMerge.cpp  WinIMergeLib.cpp  WinIMergeLib.h  cidiff.cpp  image.hpp
